- Removes unnecessary useEffect from portfolio - fixes modal overflow/scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -230,6 +230,7 @@ body {
 
 .home {
   min-height: 95vh;
+
   width: 100%;
   display: grid;
   grid-template-rows: 1fr 1fr;
@@ -371,6 +372,7 @@ body {
   width: 100%;
   background: var(--mint);
   min-height: 95vh;
+
   padding: 1em 0.5em;
   display: grid;
   grid-template-rows: 15% 85%;
@@ -536,13 +538,29 @@ body {
 .project-page {
   grid-row: 1 / 3;
   grid-column: 1;
-  padding: 5%;
+  padding: 1% 5%;
   background-color: var(--mint);
   color: var(--gray);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
   display: flex;
   flex-direction: column;
+  overflow: scroll;
+}
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 5px;
+  padding: 5px 0;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
+}
+
+::-webkit-scrollbar-corner {
+  background-color: var(--mint);
 }
 
 .project-page-title,
@@ -554,6 +572,7 @@ body {
 }
 
 .close-icon-button {
+  position: sticky;
   grid-area: close;
   width: 25px;
   background: none;
@@ -617,8 +636,7 @@ body {
 @media screen and (min-width: 600px) {
   .project-page {
     justify-content: space-around;
-    overflow: hidden;
-    max-width: 70%;
+    max-width: 90%;
     max-height: calc(100vh - 100px);
     margin: 0 auto;
   }
@@ -639,7 +657,6 @@ body {
 .about-me-section {
   min-height: 95vh;
   width: 100%;
-
   scroll-margin-top: 80px;
   display: grid;
 }
